--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+<body>
 <header>
     <div class="header">
         <a href="#default" class="logo">Jacob's Travel</a>
@@ -20,27 +21,61 @@
         </div>
       </div>
     
-</header>
-<body>
+    </header>
+    <section>
+  <div>
   <script type="text/javascript" src="../JS/slides.js"></script>
   <div class="slideshow-container">
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
+      <div class="split">
       <img src="../images/vally.png" class="slides_img">
-      <div class="text">Hiking</div>
+      <div class="top-left-text">Hiking</div>
+      <div>
+      <p class="description">Phasellus egestas mollis sem quis iaculis. 
+        Suspendisse non ante sed felis aliquet mattis et faucibus massa.
+         Mauris fermentum elementum tincidunt. In in odio non nisi varius
+          sagittis sed id neque. Nulla et risus a quam tincidunt bibendum.
+           Fusce facilisis eu mauris ullamcorper consequat. 
+           Aliquam efficitur odio ac velit tristique, in consectetur.</p>
+       </div>
+      </div>
     </div>
+  </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
+      <div class="split">
       <img src="../images/beach.png" class="slides_img">
-      <div class="text">Beach</div>
+      <div class="top-left-text">Beach</div>
+      <div>
+      <p class="description">Mauris fermentum nibh at lorem aliquam,
+         id vehicula diam tincidunt. Sed sollicitudin, diam et dignissim 
+         congue, nulla tortor suscipit nulla, non laoreet leo risus et justo.
+          Proin varius elementum elit, ut laoreet massa ultricies sed. 
+          Curabitur fermentum posuere imperdiet. Praesent sed tempor turpis.
+          </p>
+       </div>
+      </div>
     </div>
-  
+  </div>
+     
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="../images/skiing.png" class="slides_img">
-      <div class="text">Ski</div>
+      <div class="split">
+      <div><img src="../images/skiing.png" class="slides_img">
+      <div class="top-left-text">Ski</div>
+      </div>
+      <div>
+      <p class="description">Cras est enim, efficitur varius aliquet
+         id, rutrum non mauris. Morbi cursus dolor
+          pellentesque enim semper, quis efficitur 
+          libero elementum. Ut eu ante nulla. Maecenas 
+          quis felis vel quam ornare aliquet vitae pulvina
+          r odio. Sed imperdiet scelerisque turpis.</p>
+        </div>
     </div>
+  </div>
      <div class="slides_dots">
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
@@ -50,5 +85,8 @@
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
+</div>
+</section>
+
 </body>
 </html>
