--- a/pages/index.html
+++ b/pages/index.html
@@ -29,44 +29,50 @@
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
       <div class="split">
-      <img src="../images/vally.png" class="slides_img">
-      <div class="top-left-text">Hiking</div>
       <div>
+      <img src="../images/vally.png" class="slides_img">
+      </div>
+      <div>
+        <h1 class="title">Hiking</h1>
       <p class="description">Phasellus egestas mollis sem quis iaculis. 
         Suspendisse non ante sed felis aliquet mattis et faucibus massa.
          Mauris fermentum elementum tincidunt. In in odio non nisi varius
           sagittis sed id neque. Nulla et risus a quam tincidunt bibendum.
            Fusce facilisis eu mauris ullamcorper consequat. 
-           Aliquam efficitur odio ac velit tristique, in consectetur.</p>
+           Aliquam efficitur odio ac velit tristique, in consectetur.
+          </p>
        </div>
       </div>
-    </div>
   </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
       <div class="split">
-      <img src="../images/beach.png" class="slides_img">
-      <div class="top-left-text">Beach</div>
       <div>
+      <img src="../images/beach.png" class="slides_img">
+     </div>
+      <div>
+        <h1 class="title">Beach</h1>
       <p class="description">Mauris fermentum nibh at lorem aliquam,
          id vehicula diam tincidunt. Sed sollicitudin, diam et dignissim 
          congue, nulla tortor suscipit nulla, non laoreet leo risus et justo.
           Proin varius elementum elit, ut laoreet massa ultricies sed. 
           Curabitur fermentum posuere imperdiet. Praesent sed tempor turpis.
-          </p>
+        </p>
        </div>
       </div>
     </div>
-  </div>
+  
      
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
       <div class="split">
-      <div><img src="../images/skiing.png" class="slides_img">
-      <div class="top-left-text">Ski</div>
-      </div>
       <div>
+      <img src="../images/skiing.png" class="slides_img">
+      </div>
+      
+      <div>
+      <h1 class="title">SKI</h1>
       <p class="description">Cras est enim, efficitur varius aliquet
          id, rutrum non mauris. Morbi cursus dolor
           pellentesque enim semper, quis efficitur 
@@ -85,7 +91,6 @@
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
-</div>
 </section>
 
 </body>
