--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body style="background-color: #e6ffff" >
 <header>
     <div class="header">
         <a href="#default" class="logo">Jacob's Travel</a>
@@ -87,6 +87,25 @@
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
   </div>
 </div>
+<footer>
+  <div class="split_footer">
+    <div>
+    <h3 class="promo_title">Lastest Offers</h3>
+    <p class="promo">Check out our latest <br>offers on trips!</p>
+    </div>
+    <div>
+    <h3 class="promo_title">Contact Details:</h3>
+    <p class="promo">Phone: 0987123456</p>
+    </div>
+    <div>
+      <h3 class= "promo_title">Social:</h3>
+   
+      <img src="../images/twitter.png" alt="twitter logo" class="logo_size">
+      <img src="../images/facebook.png" alt="facebook logo" class="logo_size">
+      <img src="../images/instagram.png" alt="insta logo" class="logo_size">
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
