auto start slideshow

--- a/pages/index.html
+++ b/pages/index.html
@@ -99,7 +99,6 @@
     </div>
     <div>
       <h3 class= "promo_title">Social:</h3>
-   
       <img src="../images/twitter.png" alt="twitter logo" class="logo_size">
       <img src="../images/facebook.png" alt="facebook logo" class="logo_size">
       <img src="../images/instagram.png" alt="insta logo" class="logo_size">
@@ -108,4 +107,7 @@
 </footer>
 
 </body>
+<script>
+  showSlides(slideIndex);
+</script>
 </html>
