--- a/pages/index.html
+++ b/pages/index.html
@@ -12,12 +12,12 @@
 <body style="background-color: #e6ffff" >
 <header>
     <div class="header">
-        <a href="#default" class="logo">Jacob's Travel</a>
+        <a href="./index.html" class="logo">Jacob's Travel</a>
         <div class="header-right">
-          <a class="active" href="#home">Home</a>
-          <a href="#contact">Book</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+          <a href="./index.html">Home</a>
+          <a href="./book.html">Book</a>
+          <a href="./contact.html">Contact</a>
+          <a href="./about.html">About</a>
         </div>
       </div>
     
