--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
     </header>
     
     <body style="background-color: #e6ffff" >
-        <h1 class="title">Ethos</h1>
+        <h1 class="title">Our Jouney</h1>
         <section class="split">
             <div>
     <p class="description">Curabitur vel sodales tortor, id viverra purus. 
