--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,6 +20,20 @@
         </div>
 </header>
 <body style="background-color: #e6ffff" >
-    
+    <section class="split_contact">
+        <h1 class="title_contact"> Ask Away!</h1>
+        <div>
+    <input class="text_box"  type="text" placeholder="Name">
+</div>
+<div>
+    <input  class="text_box" type="text" placeholder="Email">
+</div>
+<div>
+    <input class="text_box_question" type="text" placeholder="Enquiry">
+</div>
+<div>
+    <input class="send-button" type="submit" value="Send!">
+</div>
+</section>
 </body>
 </html>
