adding footer to pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
     </header>
     
     <body style="background-color: #e6ffff" >
-        <h1 class="title">Our Jouney</h1>
+        <h1 class="title">Our Journey</h1>
         <section class="split">
             <div>
     <p class="description">Curabitur vel sodales tortor, id viverra purus. 
@@ -45,5 +45,23 @@
             <img class="ethos_img" src="../images/hiking.png" alt="hiking image">
         </div>
     </section>
+    <footer>
+        <div class="split_footer">
+          <div>
+          <h3 class="promo_title">Lastest Offers</h3>
+          <p class="promo">Check out our latest <br>offers on trips!</p>
+          </div>
+          <div>
+          <h3 class="promo_title">Contact Details:</h3>
+          <p class="promo">Phone: 0987123456</p>
+          </div>
+          <div>
+            <h3 class= "promo_title">Social:</h3>
+            <img src="../images/twitter.png" alt="twitter logo" class="logo_size">
+            <img src="../images/facebook.png" alt="facebook logo" class="logo_size">
+            <img src="../images/instagram.png" alt="insta logo" class="logo_size">
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
