--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,17 +23,38 @@
     <section class="split_contact">
         <h1 class="title_contact"> Ask Away!</h1>
         <div>
-    <input class="text_box"  type="text" placeholder="Name">
+            <label for="name">Name</label><br>
+    <input class="text_box"  type="text" placeholder="Name" autocomplete="on">
 </div>
 <div>
-    <input  class="text_box" type="text" placeholder="Email">
+    <label for="email">Email:</label><br>
+    <input  class="text_box" type="text" placeholder="Email" autocomplete="on">
 </div>
 <div>
-    <input class="text_box_question" type="text" placeholder="Enquiry">
+    <label for="question">What's your question?</label><br>
+    <input class="text_box_question" type="text" placeholder="Your Question?">
 </div>
 <div>
     <input class="send-button" type="submit" value="Send!">
 </div>
 </section>
+<footer>
+    <div class="split_footer">
+      <div>
+      <h3 class="promo_title">Lastest Offers</h3>
+      <p class="promo">Check out our latest <br>offers on trips!</p>
+      </div>
+      <div>
+      <h3 class="promo_title">Contact Details:</h3>
+      <p class="promo">Phone: 0987123456</p>
+      </div>
+      <div>
+        <h3 class= "promo_title">Social:</h3>
+        <img src="../images/twitter.png" alt="twitter logo" class="logo_size">
+        <img src="../images/facebook.png" alt="facebook logo" class="logo_size">
+        <img src="../images/instagram.png" alt="insta logo" class="logo_size">
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
