--- a/pages/book.html
+++ b/pages/book.html
@@ -19,6 +19,23 @@
         </div>
 </header>
 <body style="background-color: #e6ffff" >
-    
+    <footer>
+        <div class="split_footer">
+          <div>
+          <h3 class="promo_title">Lastest Offers</h3>
+          <p class="promo">Check out our latest <br>offers on trips!</p>
+          </div>
+          <div>
+          <h3 class="promo_title">Contact Details:</h3>
+          <p class="promo">Phone: 0987123456</p>
+          </div>
+          <div>
+            <h3 class= "promo_title">Social:</h3>
+            <img src="../images/twitter.png" alt="twitter logo" class="logo_size">
+            <img src="../images/facebook.png" alt="facebook logo" class="logo_size">
+            <img src="../images/instagram.png" alt="insta logo" class="logo_size">
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
