--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@
     <input class="text_box_question" type="text" placeholder="Your Question?">
 </div>
 <div>
-    <input class="send-button" type="submit" value="Send!">
+   <a href="./thank_you.html"><input class="send-button" type="submit" value="Send!" ></a>
 </div>
 </section>
 <footer>
