bacground thank you

--- a/pages/thank_you.html
+++ b/pages/thank_you.html
@@ -19,7 +19,7 @@
           <a href="./about.html">About</a>
         </div>
 </header>
-<body>
+<body style="background-color: #e6ffff" >
     
     <section class="thank">
     <div>
