--- a/pages/book.html
+++ b/pages/book.html
@@ -31,10 +31,12 @@
           </div>
           <div>
             <h3 class= "promo_title">Social:</h3>
+            <div class="group_images">
             <img src="../images/twitter.png" alt="twitter logo" class="logo_size">
             <img src="../images/facebook.png" alt="facebook logo" class="logo_size">
             <img src="../images/instagram.png" alt="insta logo" class="logo_size">
           </div>
+        </div>
         </div>
       </footer>
 </body>
