top safty banner

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,6 +22,26 @@
       </div>
     
     </header>
+    <section class="split_banner">
+    <div>
+       <img src="../images/safe.png" class="icon"> 
+       </div>
+       <div>
+       <h3 class="icon_text">Safety First</h3>
+    </div>
+    <div>
+      <img src="../images/fly.png" class="icon">
+    </div>
+    <div>
+      <h3 class="icon_text">Fly Anywhere</h3> 
+   </div>
+   <div>
+    <img src="../images/money.png" class="icon"> 
+  </div>
+  <div>
+    <h3 class="icon_text">Save Money</h3>
+ </div>
+    </section>
     <div class="wrapper">
   <div>
   <script type="text/javascript" src="../JS/slides.js"></script>
