--- a/pages/index.html
+++ b/pages/index.html
@@ -110,15 +110,15 @@
 <footer>
   <div class="split_footer">
     <div>
-    <h3 class="promo_title">Lastest Offers</h3>
+    <h3 class="promo_title">Lastest Offers!</h3>
     <p class="promo">Check out our latest <br>offers on trips!</p>
     </div>
     <div>
-    <h3 class="promo_title">Contact Details:</h3>
+    <h3 class="promo_title">Contact Details</h3>
     <p class="promo">Phone: 0987123456</p>
     </div>
     <div>
-      <h3 class= "promo_title">Social:</h3>
+      <h3 class= "promo_title">Social</h3>
       <div class="group_images">
       <img src="../images/twitter.png" alt="twitter logo" class="logo_size">
       <img src="../images/facebook.png" alt="facebook logo" class="logo_size">
