sub-banner on all pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,6 +20,26 @@
         </div>
 </header>
 <body style="background-color: #e6ffff" >
+    <section class="split_banner">
+        <div>
+           <img src="../images/safe.png" class="icon"> 
+           </div>
+           <div>
+           <h3 class="icon_text">Safety First</h3>
+        </div>
+        <div>
+          <img src="../images/fly.png" class="icon">
+        </div>
+        <div>
+          <h3 class="icon_text">Fly Anywhere</h3> 
+       </div>
+       <div>
+        <img src="../images/money.png" class="icon"> 
+      </div>
+      <div>
+        <h3 class="icon_text">Save Money</h3>
+     </div>
+        </section>
     <section class="split_contact">
         <h1 class="title_contact"> Ask Away!</h1>
         <div>
