--- a/pages/about.html
+++ b/pages/about.html
@@ -23,6 +23,26 @@
     </header>
     
     <body style="background-color: #e6ffff" >
+        <section class="split_banner">
+            <div>
+               <img src="../images/safe.png" class="icon"> 
+               </div>
+               <div>
+               <h3 class="icon_text">Safety First</h3>
+            </div>
+            <div>
+              <img src="../images/fly.png" class="icon">
+            </div>
+            <div>
+              <h3 class="icon_text">Fly Anywhere</h3> 
+           </div>
+           <div>
+            <img src="../images/money.png" class="icon"> 
+          </div>
+          <div>
+            <h3 class="icon_text">Save Money</h3>
+         </div>
+            </section>
         <h1 class="title">Our Journey</h1>
         <section class="split">
             <div>
