--- a/pages/book.html
+++ b/pages/book.html
@@ -19,6 +19,26 @@
         </div>
 </header>
 <body style="background-color: #e6ffff" >
+    <section class="split_banner">
+        <div>
+           <img src="../images/safe.png" class="icon"> 
+           </div>
+           <div>
+           <h3 class="icon_text">Safety First</h3>
+        </div>
+        <div>
+          <img src="../images/fly.png" class="icon">
+        </div>
+        <div>
+          <h3 class="icon_text">Fly Anywhere</h3> 
+       </div>
+       <div>
+        <img src="../images/money.png" class="icon"> 
+      </div>
+      <div>
+        <h3 class="icon_text">Save Money</h3>
+     </div>
+        </section>
     <div class="row">
   <div class="col-75">
     <div class="container">
