thank you for booking

--- a/pages/book.html
+++ b/pages/book.html
@@ -42,7 +42,7 @@
     <div class="row">
   <div class="col-75">
     <div class="container">
-      <form action="/action_page.php">
+      <!-- <form action="/action_page.php"> -->
 
         <div class="row">
           <div class="col-50">
@@ -100,8 +100,10 @@
         <label>
           <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
         </label>
-        <input type="submit" value="Continue to checkout" class="btn">
-      </form>
+        <div>
+       <a href="./thank_you.html"><input class="btn" type="submit" value="Continue to checkout" ></a>
+      </div>
+    <!-- </form> -->
     </div>
   </div>
 
@@ -113,7 +115,7 @@
           <li class="next">&#10095;</li>
           <li>
             August<br>
-            <span style="font-size:18px">2021</span>
+            <span style="font-size:18px">2022</span>
           </li>
         </ul>
       </div>
