--- a/pages/thank_you.html
+++ b/pages/thank_you.html
@@ -43,7 +43,7 @@
     
     <section class="thank">
     <div>
-        Thank You <br> For Your Question!
+        Thank You <br> For Your Query!
     </div>
     <div>
         <h3 class="message">We will be in contact soon! </h3>
